<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_drinks"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_drinks"
        android:name="com.example.drinkr.ui.drinks.DrinksFragment"
        android:label="@string/title_drinks"
        tools:layout="@layout/fragment_drinks" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.drinkr.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.drinkr.ui.agenda.AgendaFragment"
        android:label="@string/title_agenda"
        tools:layout="@layout/fragment_agenda" />
</navigation>